--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gulp",
-  "description": "The streaming build system",
-  "version": "3.8.11",
+  "name": "justrun",
+  "description": "The npm run-script build system",
+  "version": "1.0.0",
   "homepage": "http://gulpjs.com",
   "repository": "gulpjs/gulp",
-  "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
+  "author": "pH200 <ph.minamo@cytisan.com>",
   "tags": [
     "build",
     "stream",
@@ -21,23 +21,21 @@
     "completion"
   ],
   "bin": {
-    "gulp": "./bin/gulp.js"
+    "justrun": "./bin/justrun.js"
   },
-  "man": "gulp.1",
   "dependencies": {
     "archy": "^1.0.0",
     "chalk": "^1.0.0",
-    "deprecated": "^0.0.1",
     "gulp-util": "^3.0.0",
     "interpret": "^0.5.0",
     "liftoff": "^2.0.1",
     "minimist": "^1.1.0",
+    "npm-run": "^2.0.0",
     "orchestrator": "^0.3.0",
     "pretty-hrtime": "^1.0.0",
     "semver": "^4.1.0",
     "tildify": "^1.0.0",
-    "v8flags": "^2.0.2",
-    "vinyl-fs": "^0.3.0"
+    "v8flags": "^2.0.2"
   },
   "devDependencies": {
     "coveralls": "^2.7.0",
@@ -55,10 +53,9 @@
     "should": "^5.0.1"
   },
   "scripts": {
-    "prepublish": "marked-man --name gulp docs/CLI.md > gulp.1",
-    "lint": "jshint lib bin test index.js --reporter node_modules/jshint-stylish/stylish.js --exclude node_modules && jscs lib bin test index.js",
-    "test": "npm run-script lint && mocha --reporter spec",
-    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
+    "lint": "node bin/justrun.js lint --skipModuleCheck",
+    "test": "node bin/justrun.js --skipModuleCheck",
+    "coveralls": "node bin/justrun.js cover --skipModuleCheck"
   },
   "engines": {
     "node": ">= 0.9"
