--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^3.0.0",
     "interpret": "^0.5.0",
     "liftoff": "^2.0.1",
+    "lodash.flatten": "^3.0.2",
     "minimist": "^1.1.0",
     "npm-run": "^2.0.0",
     "orchestrator": "^0.3.0",
